[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hil-pusht-env"
version = "0.1.0"
description = "Standalone PushT environments with relative-action control and Xbox teleoperation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Shared Control Team" }]
dependencies = [
  "gymnasium>=0.29",
  "numpy>=1.24",
  "opencv-python>=4.8",
  "pygame>=2.1",
  "pymunk<7.0.0",
  "shapely>=1.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
hil-pusht-teleop = "hil_pusht_env.cli.teleop:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra"]
